# vczstore-poc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_alleles.py  test_append.py  test_append_icechunk.py  test_append_roundtrip.py  test_azure.py  test_cli.py  test_concurrency.py  test_icechunk.py  test_normalise.py  test_remove.py  test_store_copy.py  test_utils_merge_lists.py  utils.py
tests/data/vcf/: alleles-1-norm.vcf.gz.csi  alleles-1.vcf  alleles-1.vcf.gz.csi  alleles-2.vcf  alleles-2.vcf.gz.csi  alleles-merged.vcf.gz.csi  alleles-variants.vcf.gz.csi  chr22-part1.vcf.gz.csi  chr22-part2.vcf.gz.csi  sample-part1.vcf.gz.csi  sample-part2-alleles-mismatch.vcf.gz.csi  sample-part2.vcf.gz.csi
vczlib/: __init__.py  cubed_impl.py  ops.py  zarr_serial.py
vczstore/: __init__.py  __main__.py  allele_harmonisation.py  append.py  cli.py  concurrency.py  cubed_impl.py  icechunk_utils.py  normalise.py  remove.py  store_copy.py  utils.py  xarray_impl.py  zarr_impl.py  zarr_partition_impl.py
