[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "numpy>=2",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "vczstore-poc"
description = "Library for a VCF Zarr store"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "sgkit Developers", email = "project@sgkit.dev"},
]
dependencies = [
  "click>=8.2.0",
  "numpy>=1.23.5,<2.4",
  "vcztools @ git+https://github.com/sgkit-dev/vcztools.git",
  "zarr>=3.1",
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Aplha",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/sgkit-dev/vczstore-poc"

[project.scripts]
vczstore = "vczstore.cli:vczstore_main"

[project.optional-dependencies]
dev = [
  "bio2zarr @ git+https://github.com/sgkit-dev/bio2zarr.git",
  "cyvcf2",
  "pytest",
]

[tool.setuptools]
packages = ["vczstore"]

[tool.setuptools_scm]
write_to = "vczstore/_version.py"

[tool.ruff]
# Assume Python 3.11
target-version = "py311"

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]
#Allow uppercase names for e.g. call_AD
#Don't add strict=False to zips (B905)
ignore = ["N806", "N802", "N803", "A001", "A002", "B905", "RUF", "UP038"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = [
  "bio2zarr",
  "cyvcf2",
  "numpy",
  "pytest",
  "setuptools",
  "vcztools",
  "zarr"
]