[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "numpy>=2",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "vczstore"
description = "Tools for managing a VCF Zarr store"
readme = "README.md"
license = "Apache-2.0"
authors = [
  {name = "sgkit Developers", email = "project@sgkit.dev"},
]
dependencies = [
  "bio2zarr @ git+https://github.com/sgkit-dev/bio2zarr.git",
  "click>=8.2.0",
  "more_itertools",
  "numpy>=1.23.5,<2.4",
  "tqdm",
  "vcztools @ git+https://github.com/sgkit-dev/vcztools.git",
  "zarr>=3.1",
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/sgkit-dev/vczstore"

[project.scripts]
vczstore = "vczstore.cli:vczstore_main"

[project.optional-dependencies]
icechunk = ["hypothesis", "icechunk"]

[dependency-groups]
test = [
  "azure-storage-blob",
  "cyvcf2",
  "pytest",
  "pytest-cov",
]

lint = [
  "ruff==0.15.1",
  "prek==0.3.3",
]

packaging = [
  "twine",
  "validate-pyproject[all]",
]

dev = [
  {include-group = "test"},
  {include-group = "lint"},
  {include-group = "packaging"},
]

[tool.setuptools]
packages = ["vczstore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vczstore --cov-report=term-missing"

[tool.setuptools_scm]
write_to = "vczstore/_version.py"
local_scheme = "no-local-version"

[tool.ruff]
# Assume Python 3.11
target-version = "py311"

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]
#Allow uppercase names for e.g. call_AD
#Don't add strict=False to zips (B905)
ignore = ["N806", "N802", "N803", "A001", "A002", "B905", "RUF"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = [
  "bio2zarr",
  "click",
  "cyvcf2",
  "more_itertools",
  "numpy",
  "pytest",
  "setuptools",
  "vcztools",
  "zarr"
]
